fixed search form on mobile

--- a/app/assets/stylesheets/meetup_events.scss
+++ b/app/assets/stylesheets/meetup_events.scss
@@ -41,7 +41,7 @@
 
 .grid-sizer,
 .grid-item {
-  width: 300px;
+  width: 345px;
   margin-bottom: 10px;
 }
 
@@ -51,6 +51,10 @@
   .radius-input {
     height: 35px;
   }
+}
+
+.nav-search-from {
+  margin-bottom: 10px;
 }
 
 .content {
@@ -141,12 +145,28 @@
   }
 }
 
+/* Responsive: 1024 and up */
+@media screen and (max-width: 1024px) {
+  .grid-sizer,
+  .grid-item {
+    width: 325px;
+    margin-bottom: 10px;
+  }
+}
 /* Responsive: Portrait tablets and up */
 @media screen and (max-width: 768px) {
   .grid-sizer,
   .grid-item {
-    width: 33.333%;
+    width: 32%;
     margin-bottom: 10px;
+  }
+
+  .search-box {
+    margin: 10px 10px 10px 10px;
+
+    .radius-input {
+      height: 35px;
+    }
   }
 
   .content {
